[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# JSON libs
serde_json = "1.0"
serde = { version = "1.0.104", features = ["derive"] }
# Blockchain utils
secp256k1 = { version = "0.26.0", features = ["rand", "bitcoin_hashes"] }

# Utils
rand = "0.8.5"
